hphp/test/zend/good/ext/standard/tests/image/image_type_to_extension.php.skipif
<?php 
	if (!function_exists('image_type_to_extension')) die('skip image_type_to_extension() not available'); 
	require_once('skipif_imagetype.inc');
?>