hphp/test/zend/bad/ext/soap/tests/interop/Round2/Base/r2_base_005w.php.skipif
<?php require_once('skipif.inc'); ?>
<?php if (!function_exists('utf8_encode')) die('skip utf8_encode() not available'); ?>